@@ -933,6 +933,137 @@ return</pre>
       <h2>Interface summary</h2>
     </section>
 
+    <section class='appedix'>
+      <h2>Conformance</h2>
+
+      <section>
+        <h3 id="conventions">
+        Document conventions</h3>
+
+        <p>Conformance requirements are expressed with a combination of
+        descriptive assertions and RFC 2119 terminology. The key words “MUST”,
+        “MUST NOT”, “REQUIRED”, “SHALL”, “SHALL NOT”, “SHOULD”, “SHOULD NOT”,
+        “RECOMMENDED”, “MAY”, and “OPTIONAL” in the normative parts of this
+        document are to be interpreted as described in RFC 2119.
+        However, for readability, these words do not appear in all uppercase
+        letters in this specification.
+
+        <p>All of the text of this specification is normative except sections
+        explicitly marked as non-normative, examples, and notes. [[!RFC2119]]</p>
+
+        <p>Examples in this specification are introduced with the words “for example”
+        or are set apart from the normative text with <code>class="example"</code>,
+        like this:
+
+        <div class="example">
+          <p>This is an example of an informative example.</p>
+        </div>
+
+        <p>Informative notes begin with the word “Note” and are set apart from the
+        normative text with <code>class="note"</code>, like this:
+
+        <p class="note">Note, this is an informative note.</p>
+      </section>
+
+      <section>
+        <h3 id="conformance-classes">
+        Conformance classes</h3>
+
+        <p>Conformance to CSS Masking
+        is defined for three conformance classes:
+        <dl>
+          <dt><dfn title="style sheet!!as conformance class">style sheet</dfn>
+            <dd>A <a href="http://www.w3.org/TR/CSS21/conform.html#style-sheet">CSS
+            style sheet</a>.
+          <dt><dfn>renderer</dfn></dt>
+            <dd>A <a href="http://www.w3.org/TR/CSS21/conform.html#user-agent">UA</a>
+            that interprets the semantics of a style sheet and renders
+            documents that use them.
+          <dt><dfn id="authoring-tool">authoring tool</dfn></dt>
+            <dd>A <a href="http://www.w3.org/TR/CSS21/conform.html#user-agent">UA</a>
+            that writes a style sheet.
+        </dl>
+
+        <p>A style sheet is conformant to CSS Masking
+        if all of its statements that use syntax defined in this module are valid
+        according to the generic CSS grammar and the individual grammars of each
+        feature defined in this module.
+
+        <p>A renderer is conformant to CSS Masking
+        if, in addition to interpreting the style sheet as defined by the
+        appropriate specifications, it supports all the features defined
+        by CSS Masking by parsing them correctly
+        and rendering the document accordingly. However, the inability of a
+        UA to correctly render a document due to limitations of the device
+        does not make the UA non-conformant. (For example, a UA is not
+        required to render color on a monochrome monitor.)
+
+        <p>An authoring tool is conformant to CSS Masking
+        if it writes style sheets that are syntactically correct according to the
+        generic CSS grammar and the individual grammars of each feature in
+        this module, and meet all other conformance requirements of style sheets
+        as described in this module.
+      </section>
+
+      <section>
+        <h3 id="partial">
+        Partial implementations</h3>
+
+        <p>So that authors can exploit the forward-compatible parsing rules to
+        assign fallback values, CSS renderers <strong>must</strong>
+        treat as invalid (and <a href="http://www.w3.org/TR/CSS21/conform.html#ignore">ignore
+        as appropriate</a>) any at-rules, properties, property values, keywords,
+        and other syntactic constructs for which they have no usable level of
+        support. In particular, user agents <strong>must not</strong> selectively
+        ignore unsupported component values and honor supported values in a single
+        multi-value property declaration: if any value is considered invalid
+        (as unsupported values must be), CSS requires that the entire declaration
+        be ignored.</p>
+      </section>
+
+      <section>
+        <h3 id="experimental">
+        Experimental implementations</h3>
+
+        <p>To avoid clashes with future CSS features, the CSS2.1 specification
+        reserves a <a href="http://www.w3.org/TR/CSS21/syndata.html#vendor-keywords">prefixed
+        syntax</a> for proprietary and experimental extensions to CSS.
+
+        <p>Prior to a specification reaching the Candidate Recommendation stage
+        in the W3C process, all implementations of a CSS feature are considered
+        experimental. The CSS Working Group recommends that implementations
+        use a vendor-prefixed syntax for such features, including those in
+        W3C Working Drafts. This avoids incompatibilities with future changes
+        in the draft.
+        </p>
+      </section>
+
+      <section>
+        <h3 id="testing">
+        Non-experimental implementations</h3>
+
+        <p>Once a specification reaches the Candidate Recommendation stage,
+        non-experimental implementations are possible, and implementors should
+        release an unprefixed implementation of any CR-level feature they
+        can demonstrate to be correctly implemented according to spec.
+
+        <p>To establish and maintain the interoperability of CSS across
+        implementations, the CSS Working Group requests that non-experimental
+        CSS renderers submit an implementation report (and, if necessary, the
+        testcases used for that implementation report) to the W3C before
+        releasing an unprefixed implementation of any CSS features. Testcases
+        submitted to W3C are subject to review and correction by the CSS
+        Working Group.
+
+        <p>Further information on submitting testcases and implementation reports
+        can be found from on the CSS Working Group's website at
+        <a href="http://www.w3.org/Style/CSS/Test/">http://www.w3.org/Style/CSS/Test/</a>.
+        Questions should be directed to the
+        <a href="http://lists.w3.org/Archives/Public/public-css-testsuite">public-css-testsuite@w3.org</a>
+        mailing list.
+      </section>
+    </section>
+
     <section class='appendix'>
       <h2>Acknowledgments</h2>
       <p>
