@@ -1,3 +1,6 @@
+2013-03-11  Dirk Schulze  <dschulze@adobe.com>
+	Add Conformance section.
+
 2013-03-10  Dirk Schulze  <dschulze@adobe.com>
 	Remove issues for 3D arguments on rotateFromVectorBy and rotateFromVector.
 
